tests/trybuild/depends_on_itself.rs
use error_set::error_set;

error_set! {
    BookParsingError = {
        MissingDescriptionArg
    } || BookParsingError;
    BookSectionParsingError = {
        MissingNameArg,
        NoContents,
    };
}